Create Hasura createUser Action
I've defaulted to camelCase naming within graphQL because
that's the convention, but I'm happy to go back to snake case if that's
preferred.

I've grouped all potential updates/inserts into one mutation,
to minimize the i/o and better utilize graphQL.

I still need to write the authentication code. Because the serverless
function is hosted publicly by vercel, we should auth on a pre-shared
environmental secret that'd be passed as a request header. We should
probably be doing this on all vercel-hosted actions to ensure we don't
see unauthorized db writes. Only hasura should be able to do anything
with these functions.

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -6,10 +6,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: createUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/create_user'
+  comment: creates a user in a circle and creates a profile if none exists
 custom_types:
   enums: []
   input_objects:
   - name: create_circle_input
+  - name: createUserInput
   objects:
   - name: create_circle_response
     relationships:
@@ -29,4 +35,5 @@ custom_types:
       type: object
       field_mapping:
         protocol_id: id
+  - name: createUserResponse
   scalars: []
