--- a/package.json
+++ b/package.json
@@ -180,7 +180,7 @@
     "prisma": "3.4.2",
     "react-scripts": "5.0.0-next.47",
     "source-map-explorer": "2.5.2",
-    "storybook-addon-designs": "^6.2.1",
+    "storybook-addon-designs": "~6.2.1",
     "stream-browserify": "3.0.0",
     "tmp": "0.2.1",
     "ts-auto-mock": "3.5.0",
