--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ PRISMA_DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 # Hasura CLI (used with ./hasura/config.yaml)
 HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
 HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
+HASURA_EVENT_SECRET=event-secret
 # Same as prisma but replace s/localhost/postgres
 HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 
