--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,16 +1,24 @@
 actions:
-- name: create_circle
-  definition:
-    kind: synchronous
-    handler: '{{HASURA_ACTION_BASE_URL}}/create_circle'
-  permissions:
-  - role: user
-  - role: superadmin
 - name: createUser
   definition:
     kind: synchronous
     handler: '{{HASURA_ACTION_BASE_URL}}/create_user'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   comment: creates a user in a circle and creates a profile if none exists
+- name: create_circle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/create_circle'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 custom_types:
   enums: []
   input_objects:
