--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: ${HASURA_GRAPHQL_ADMIN_SECRET}
       HASURA_EVENT_SECRET: ${HASURA_EVENT_SECRET}
       HASURA_GRAPHQL_AUTH_HOOK: http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:${LOCAL_VERCEL_PORT}/api/hasura/auth
-      HASURA_GRAPHQL_CRON_URL: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/cron
+      HASURA_CRON_BASE_URL: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/cron
+      HASURA_EVENT_TRIGGER_BASE_URL: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/event-triggers
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
       # Linux (read: non macOS or Windows) users should
