Feature/create circle hasura (#423)
* Create Circle hasura

Mutation / Action Handler / Validation

* add env for handler base url

* remove uxresearch

* use zod for validation

* move zod schema to shared lib

* add zod validation for profiles

* run linter

* add gql-zeus

* add protocol relationship

* remove unused packages

* yarn generate and change input to zeus generated type

update from main

* refactor query/mutations

* updates to validation

* Run yarn generate

* merge main

Co-authored-by: Alex Warren <exrhizo@gmail.com>

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,6 +1,32 @@
-actions: []
+actions:
+- name: create_circle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/create_circle'
+  permissions:
+  - role: user
+  - role: superadmin
 custom_types:
   enums: []
-  input_objects: []
-  objects: []
+  input_objects:
+  - name: create_circle_input
+  objects:
+  - name: create_circle_response
+    relationships:
+    - remote_table:
+        schema: public
+        name: users
+      name: users
+      source: default
+      type: array
+      field_mapping:
+        id: circle_id
+    - remote_table:
+        schema: public
+        name: protocols
+      name: protocol
+      source: default
+      type: object
+      field_mapping:
+        protocol_id: id
   scalars: []
