--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,32 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: ${LOCAL_HASURA_ADMIN_SECRET}
       HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/auth
       ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
+      HASURA_ACTION_BASE_URL: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/actions
+
+
+  # for local s3 storage for images
+  localstack:
+    image: localstack/localstack:latest
+    hostname: s3
+    networks:
+      default:
+        aliases:
+          - s3.localhost.localstack.cloud
+          - s3-website.localhost.localstack.cloud
+          - coordinape.s3.localhost.localstack.cloud
+          - coordinape.s3-website.localhost.localstack.cloud
+    environment:
+      - HOSTNAME_EXTERNAL=localstack
+      - AWS_DEFAULT_REGION=us-east-1
+      - EDGE_PORT=4566
+      - SERVICES=s3
+      - DATA_DIR=/tmp/localstack/data
+    ports:
+      - '4566-4583:4566-4583'
+    volumes:
+      - "${TEMPDIR:-/tmp/localstack}:/tmp/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - ./docker/localstack/docker-entrypoint-initaws.d:/docker-entrypoint-initaws.d
 
 
   # for local s3 storage for images
