--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Shared Environment
 LOCAL_SEED_ADDRESS=0xYOUR_DEV_ADDRESS
 HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
+HARDHAT_FORK_BLOCK=13500000
 REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
