--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
     "faker": "5.5.3",
+    "figma-api": "^1.9.2",
     "gqty": "2.1.0",
     "graphql": "16.2.0",
     "graphql-zeus": "4.0.4",
@@ -94,7 +95,8 @@
     "typecheck": "tsc --noEmit",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "figma-colors": "node ./scripts/tsrun.mjs ./src/ui/scripts/figma-colors.ts"
   },
   "lint-staged": {
     "{api,src}/**/*.{js,ts,tsx}": [
