Further review-related fixes
- use sound form of if statement
- return all params that were requested
- validate that the requesting user is a circle admin

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -7,6 +7,9 @@ actions:
     headers:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
   comment: creates a user in a circle and creates a profile if none exists
 - name: create_circle
   definition:
