--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,9 @@ REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:45
 # Staging Environment
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
 #REACT_APP_HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
+#REACT_APP_S3_BASE_URL=https://coordinape-staging.s3.amazonaws.com/
 
 # Production Environment
 #REACT_APP_API_BASE_URL=https://coordinape.me/api
 #REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
-#REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
+#REACT_APP_S3_BASE_URL=https://coordinape-prod.s3.amazonaws.com/
