--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ HARDHAT_GANACHE_PORT=8555
 REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
+AWS_BUCKET_IMAGES=coordinape
 
 # Default local variables
 LOCAL_HASURA_PORT=8080
@@ -30,8 +31,9 @@ REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
 REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:4566
 # NODE: Used for the node scripts and vercel serverless functions
 NODE_HASURA_URL=http://localhost:8080/v1/graphql
-REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:4566
 TELEGRAM_BOT_TOKEN=<your Telegram testing bot token>
+AWS_ENDPOINT=http://s3.localhost.localstack.cloud:4566
+AWS_BUCKET_IMAGES=coordinape
 
 # Staging Environment
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
@@ -46,3 +48,8 @@ TELEGRAM_BOT_TOKEN=<your Telegram testing bot token>
 # for src/scripts
 # go to https://www.figma.com/developers/api#authentication
 FIGMA_ACCESS_TOKEN=
+
+# These will need to be set to something meaningful for deployment, but in local can be unset
+AWS_ACCESS_KEY_ID=tbd
+AWS_SECRET_ACCESS_KEY=tbd
+
