--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -21,11 +21,19 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: upload_profile_avatar
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/upload_profile_avatar'
+  permissions:
+  - role: user
 custom_types:
   enums: []
   input_objects:
   - name: create_circle_input
   - name: createUserInput
+  - name: upload_image_input
+  - name: upload_profile_avatar_input
   objects:
   - name: create_circle_response
     relationships:
@@ -46,4 +54,15 @@ custom_types:
       field_mapping:
         id: id
   - name: createUserResponse
+  - name: upload_image_response
+  - name: upload_profile_avatar_response
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
+      source: default
+      type: object
+      field_mapping:
+        profile_id: id
   scalars: []
