--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@sentry/react": "6.17.1",
     "@sentry/tracing": "6.17.1",
     "@stitches/react": "1.2.6",
+    "@types/sharp": "^0.29.5",
+    "@types/uuid": "^8.3.4",
     "@web3-react/core": "6.1.9",
     "@web3-react/fortmatic-connector": "6.1.6",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/portis-connector": "6.1.9",
     "@web3-react/walletconnect-connector": "6.2.4",
     "@web3-react/walletlink-connector": "6.2.5",
+    "aws-sdk": "^2.1072.0",
     "axios": "0.21.2",
     "clsx": "1.1.1",
     "d3-force-3d": "2.3.2",
@@ -51,9 +54,11 @@
     "react-string-replace": "0.4.4",
     "react-virtualized-auto-sizer": "1.0.5",
     "recoil": "0.4.1",
+    "sharp": "^0.30.1",
     "source-map-explorer": "2.5.2",
     "styled-components": "5.2.3",
     "true-myth": "4.1.1",
+    "uuid": "^8.3.2",
     "zod": "3.11.6"
   },
   "resolutions": {
