--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "hardhat:install": "yarn --cwd hardhat install",
     "hardhat:test": "yarn --cwd hardhat test",
     "test": "craco test",
-    "test:all": "CI=1 craco test --coverage && yarn hardhat:test",
+    "test:all": "CI=1 yarn hardhat:test && craco test --coverage",
     "test:ci": "./hardhat/scripts/start-ganache.sh --exec yarn test:all",
     "eject": "craco eject",
     "format:staged": "lint-staged",
