--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,6 +8,7 @@ jobs:
     env:
       CI: true
       ETHEREUM_RPC_URL: https://mainnet.infura.io/v3/275c8fc2ec294d6aac6bfc881d9a9dff
+      HARDHAT_FORK_BLOCK: 13500000
       HARDHAT_GANACHE_PORT: 8555
       REACT_APP_S3_BASE_URL: https://coordinape.s3.amazonaws.com
       REACT_APP_API_BASE_URL: https://staging-api.coordinape.com/api
