--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
       "@emotion/core": ["./types/emotion-core-stub.d.ts"]
     }
   },
-  "include": ["src", "api", "api-lib"]
+  "include": ["src", "api-lib"]
 }
