allow users to run aggregation queries in hasura
need this for getting the count of gifts received during an epoch, for the upcoming distribution page in the vaults UI

--- a/hasura/metadata/databases/default/tables/public_token_gifts.yaml
+++ b/hasura/metadata/databases/default/tables/public_token_gifts.yaml
@@ -38,6 +38,7 @@ select_permissions:
     filter: {}
   role: superadmin
 - permission:
+    allow_aggregations: true
     columns:
     - circle_id
     - created_at
