--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,8 +1,24 @@
 actions:
+- name: createUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/create_user'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
+  comment: creates a user in a circle and creates a profile if none exists
 - name: create_circle
   definition:
     kind: synchronous
     handler: '{{HASURA_ACTION_BASE_URL}}/create_circle'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   permissions:
   - role: user
   - role: superadmin
@@ -10,6 +26,7 @@ custom_types:
   enums: []
   input_objects:
   - name: create_circle_input
+  - name: createUserInput
   objects:
   - name: create_circle_response
     relationships:
@@ -29,4 +46,5 @@ custom_types:
       type: object
       field_mapping:
         protocol_id: id
+  - name: createUserResponse
   scalars: []
