--- a/package.json
+++ b/package.json
@@ -82,8 +82,7 @@
     "hardhat:install": "yarn --cwd hardhat install",
     "hardhat:test": "yarn --cwd hardhat test",
     "test": "craco test",
-    "test:all": "yarn hardhat:test && CI=1 craco test --coverage",
-    "test:ci": "./hardhat/scripts/start-ganache.sh --exec yarn test:all",
+    "test:ci": "./hardhat/scripts/start-ganache.sh --exec ./scripts/ci.sh",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
