--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -10,14 +10,14 @@
     "codegen": "ts-node scripts/generate-deployment-info.ts",
     "dev": "./scripts/start-node.sh",
     "deploy": "DEBUG=coordinape:setup hardhat deploy",
-    "test": "TEST=1 hardhat test"
+    "ganache": "./scripts/start-ganache.sh",
+    "test": "GANACHE=1 FORK_MAINNET=1 ./scripts/start-ganache.sh --exec hardhat test --network ci"
   },
   "files": [
     "dist"
   ],
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "2.0.2",
-    "@nomiclabs/hardhat-ganache": "2.0.1",
+    "@nomiclabs/hardhat-ethers": "2.0.4",
     "@nomiclabs/hardhat-waffle": "2.0.1",
     "@openzeppelin/contracts": "4.4.2",
     "@typechain/ethers-v5": "7.0.0",
@@ -30,7 +30,7 @@
     "dotenv": "10.0.0",
     "ethereum-waffle": "3.4.0",
     "ethers": "5.4.6",
-    "ganache-cli": "6.12.2",
+    "ganache": "^7.0.2",
     "hardhat": "2.8.0",
     "hardhat-deploy": "0.9.0",
     "ts-node": "9.1.1",
