--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ PRISMA_DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 
 # HASURA_GRAPHQL auto used by hasura CLI (used with ./hasura/config.yaml)
 HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
+HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
+HASURA_EVENT_SECRET=event-secret
 # Same as prisma but replace s/localhost/postgres
 HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 
