add request verification to check-nominee cron

--- a/hasura/metadata/cron_triggers.yaml
+++ b/hasura/metadata/cron_triggers.yaml
@@ -3,3 +3,6 @@
   schedule: 1 0 * * *
   include_in_metadata: true
   payload: {}
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
