--- a/hasura/metadata/databases/default/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/default/tables/public_nominees.yaml
@@ -85,6 +85,9 @@ event_triggers:
     update:
       columns:
       - ended
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
   name: check-nominee-discord
   retry_conf:
     interval_sec: 3600
@@ -96,6 +99,9 @@ event_triggers:
     update:
       columns:
       - ended
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
   name: check-nominee-telegram
   retry_conf:
     interval_sec: 3600
