--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,4 +1,15 @@
 actions:
+- name: adminUpdateUser
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/admin_update_user'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: createUser
   definition:
     kind: synchronous
@@ -10,6 +21,7 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+  comment: creates a user in a circle and creates a profile if none exists
 - name: create_circle
   definition:
     kind: synchronous
@@ -68,9 +80,10 @@ custom_types:
   enums: []
   input_objects:
   - name: create_circle_input
-  - name: createUserInput
   - name: upload_image_input
   - name: upload_circle_image_input
+  - name: CreateUserInput
+  - name: AdminUpdateUserInput
   objects:
   - name: create_circle_response
     relationships:
@@ -90,7 +103,6 @@ custom_types:
       type: object
       field_mapping:
         id: id
-  - name: createUserResponse
   - name: update_profile_response
     relationships:
     - remote_table:
@@ -121,4 +133,6 @@ custom_types:
       type: object
       field_mapping:
         id: id
+  - name: CreateUserResponse
+  - name: AdminUpdateUserResponse
   scalars: []
