--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -2,7 +2,7 @@ actions:
 - name: createUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_ACTION_BASE_URL}}/create_user'
+    handler: '{{HASURA_API_BASE_URL}}/actions/create_user'
     forward_client_headers: true
     headers:
     - name: verification_key
@@ -13,7 +13,7 @@ actions:
 - name: create_circle
   definition:
     kind: synchronous
-    handler: '{{HASURA_ACTION_BASE_URL}}/create_circle'
+    handler: '{{HASURA_API_BASE_URL}}/actions/create_circle'
     forward_client_headers: true
     headers:
     - name: verification_key
