--- a/hasura/metadata/cron_triggers.yaml
+++ b/hasura/metadata/cron_triggers.yaml
@@ -1,5 +1,5 @@
 - name: check-nominee
-  webhook: '{{HASURA_CRON_BASE_URL}}/check-nominee'
+  webhook: '{{HASURA_API_BASE_URL}}/cron/check-nominee'
   schedule: 1 0 * * *
   include_in_metadata: true
   payload: {}
