adds checkbox component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
     "@prisma/client": "3.4.2",
+    "@radix-ui/react-checkbox": "^0.1.4",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.17.1",
     "@sentry/react": "6.17.1",
@@ -135,7 +136,9 @@
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
+    "@storybook/addon-viewport": "^6.4.19",
     "@storybook/builder-webpack5": "^6.4.14",
+    "@storybook/client-api": "^6.4.19",
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/node-logger": "^6.4.14",
     "@storybook/preset-create-react-app": "^3.2.0",
