fixes #439 and refactors shared code between profile and background

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ HARDHAT_GANACHE_PORT=8555
 REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
-AWS_BUCKET_IMAGES=coordinape
+IMAGES_AWS_BUCKET=coordinape
 
 # Default local variables
 LOCAL_HASURA_PORT=8080
@@ -32,8 +32,8 @@ REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:45
 # NODE: Used for the node scripts and vercel serverless functions
 NODE_HASURA_URL=http://localhost:8080/v1/graphql
 TELEGRAM_BOT_TOKEN=<your Telegram testing bot token>
-AWS_ENDPOINT=http://s3.localhost.localstack.cloud:4566
-AWS_BUCKET_IMAGES=coordinape
+IMAGES_AWS_ENDPOINT=http://s3.localhost.localstack.cloud:4566
+IMAGES_AWS_BUCKET=coordinape
 
 # Staging Environment
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
@@ -50,6 +50,6 @@ AWS_BUCKET_IMAGES=coordinape
 FIGMA_ACCESS_TOKEN=
 
 # These will need to be set to something meaningful for deployment, but in local can be unset
-AWS_ACCESS_KEY_ID=tbd
-AWS_SECRET_ACCESS_KEY=tbd
-
+IMAGES_AWS_ACCESS_KEY_ID=tbd
+IMAGES_AWS_SECRET_ACCESS_KEY=tbd
+IMAGES_AWS_REGION=tbd
