--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -165,4 +165,13 @@ custom_types:
       field_mapping:
         id: id
   - name: create_nominee_response
+    relationships:
+    - remote_table:
+        schema: public
+        name: nominees
+      name: nominee
+      source: default
+      type: object
+      field_mapping:
+        id: id
   scalars: []
