--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -90,6 +90,12 @@ actions:
   definition:
     kind: synchronous
     handler: '{{HASURA_ACTION_BASE_URL}}/create_nominee'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 custom_types:
   enums: []
   input_objects:
