--- a/.env.example
+++ b/.env.example
@@ -43,4 +43,6 @@ HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
 #REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
 #REACT_APP_S3_BASE_URL=https://coordinape-prod.s3.amazonaws.com/
 
-FIGMA_ACCESS_TOKEN=/* go to https://www.figma.com/developers/api#authentication */
+# for src/scripts
+# go to https://www.figma.com/developers/api#authentication
+FIGMA_ACCESS_TOKEN=
