Script to consume and generate colors from figma API (#520)
* adds figma-api npm

* adds script to retrieve style colors from figma

* refactor var name

* adds figma-api exact version

* adds generate colors file

* cleanup

Co-authored-by: Lawrence Wang <l@lw.io>

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
 #REACT_APP_API_BASE_URL=https://coordinape.me/api
 #REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
 #REACT_APP_S3_BASE_URL=https://coordinape-prod.s3.amazonaws.com/
+
+# for src/scripts
+# go to https://www.figma.com/developers/api#authentication
+FIGMA_ACCESS_TOKEN=
