Feature/ape 404: check nominees cron trigger (#499)
Co-authored-by: zashton <17747090+zashton@users.noreply.github.com>

--- a/hasura/metadata/cron_triggers.yaml
+++ b/hasura/metadata/cron_triggers.yaml
@@ -1,1 +1,8 @@
-[]
+- name: check-nominee
+  webhook: '{{HASURA_API_BASE_URL}}/cron/check-nominee'
+  schedule: 1 0 * * *
+  include_in_metadata: true
+  payload: {}
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
