--- a/hasura/metadata/databases/default/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/default/tables/public_nominees.yaml
@@ -79,3 +79,32 @@ select_permissions:
             id:
               _eq: X-Hasura-User-Id
   role: user
+event_triggers:
+- definition:
+    enable_manual: false
+    update:
+      columns:
+      - ended
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: check-nominee-discord
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/check-nominee-discord"
+- definition:
+    enable_manual: false
+    update:
+      columns:
+      - ended
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: check-nominee-telegram
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/check-nominee-telegram"
