--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,8 @@ REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
 REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:4566
 # NODE: Used for the node scripts and vercel serverless functions
 NODE_HASURA_URL=http://localhost:8080/v1/graphql
-HASURA_EVENT_SECRET=event-secret
-HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
+REACT_APP_S3_BASE_URL=http://coordinape.s3-website.localhost.localstack.cloud:4566
+TELEGRAM_BOT_TOKEN=<your Telegram testing bot token>
 
 # Staging Environment
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
