--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@material-ui/lab": "4.0.0-alpha.58",
     "@material-ui/pickers": "3.3.10",
     "@prisma/client": "3.4.2",
-    "@radix-ui/react-checkbox": "^0.1.4",
+    "@radix-ui/react-checkbox": "0.1.4",
     "@self.id/core": "0.1.0",
     "@sentry/integrations": "6.17.1",
     "@sentry/react": "6.17.1",
@@ -45,6 +45,7 @@
     "notistack": "1.0.10",
     "polished": "4.1.1",
     "react": "17.0.1",
+    "react-currency-input-field": "3.6.4",
     "react-dom": "17.0.1",
     "react-force-graph-2d": "1.23.8",
     "react-query": "3.34.8",
