--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -2,7 +2,7 @@ actions:
 - name: adminUpdateUser
   definition:
     kind: synchronous
-    handler: '{{HASURA_ACTION_BASE_URL}}/admin_update_user'
+    handler: '{{HASURA_API_BASE_URL}}/admin_update_user'
     forward_client_headers: true
     headers:
     - name: verification_key
