fixes #435 and fixes #439 by porting uploadProfileAvatar and uploadProfileBackground from laravel to hasura (#547)

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -21,11 +21,26 @@ actions:
   permissions:
   - role: user
   - role: superadmin
+- name: upload_profile_avatar
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/upload_profile_avatar'
+  permissions:
+  - role: superadmin
+  - role: user
+- name: upload_profile_background
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_ACTION_BASE_URL}}/upload_profile_background'
+  permissions:
+  - role: superadmin
+  - role: user
 custom_types:
   enums: []
   input_objects:
   - name: create_circle_input
   - name: createUserInput
+  - name: upload_image_input
   objects:
   - name: create_circle_response
     relationships:
@@ -46,4 +61,14 @@ custom_types:
       field_mapping:
         id: id
   - name: createUserResponse
+  - name: update_profile_response
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
+      source: default
+      type: object
+      field_mapping:
+        id: id
   scalars: []
