--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -24,14 +24,14 @@ actions:
 - name: upload_profile_avatar
   definition:
     kind: synchronous
-    handler: '{{HASURA_ACTION_BASE_URL}}/upload_profile_avatar'
+    handler: '{{HASURA_API_BASE_URL}}/actions/upload_profile_avatar'
   permissions:
   - role: superadmin
   - role: user
 - name: upload_profile_background
   definition:
     kind: synchronous
-    handler: '{{HASURA_ACTION_BASE_URL}}/upload_profile_background'
+    handler: '{{HASURA_API_BASE_URL}}/actions/upload_profile_background'
   permissions:
   - role: superadmin
   - role: user
