--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "@vercel/node": "1.12.1",
+    "@web3-react/network-connector": "^6.2.9",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
