--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@date-io/luxon": "1.3.13",
     "@gqty/react": "2.1.0",
     "@hcaptcha/react-hcaptcha": "0.3.7",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
@@ -49,6 +50,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-force-graph-2d": "1.23.8",
+    "react-hook-form": "^7.27.0",
     "react-query": "3.34.8",
     "react-router-dom": "6.2.1",
     "react-string-replace": "0.4.4",
