--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -29,6 +29,16 @@ actions:
     headers:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
+    permissions:
+    - role: user
+    - role: superadmin
+- name: logout_user
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/logout_user'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
   permissions:
   - role: superadmin
   - role: user
@@ -97,6 +107,16 @@ custom_types:
         schema: public
         name: circles
       name: circle
+      source: default
+      type: object
+      field_mapping:
+        id: id
+  - name: logout_response
+    relationships:
+    - remote_table:
+        schema: public
+        name: profiles
+      name: profile
       source: default
       type: object
       field_mapping:
