parameterize chain id

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Shared Environment
 LOCAL_SEED_ADDRESS=0xYOUR_DEV_ADDRESS
+HARDHAT_CHAIN_ID=1337
 HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
 HARDHAT_FORK_BLOCK=13500000
 HARDHAT_GANACHE_PORT=8555
