set up jest-ts-auto-mock

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -17,8 +21,20 @@
     "jsx": "react-jsx",
     "baseUrl": "src",
     "paths": {
-      "@emotion/core": ["./types/emotion-core-stub.d.ts"]
-    }
+      "@emotion/core": [
+        "./types/emotion-core-stub.d.ts"
+      ]
+    },
+    "plugins": [
+      {
+        "transform": "ts-auto-mock/transformer",
+        "cacheBetweenTests": false
+      }
+    ]
   },
-  "include": ["src", "api-lib","api"]
+  "include": [
+    "src",
+    "api-lib",
+    "api"
+  ]
 }
