--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "http-browserify": "1.7.0",
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
+    "jest-ts-auto-mock": "^2.0.0",
     "lint-staged": "10.5.4",
     "os-browserify": "0.3.0",
     "prettier": "2.4.1",
@@ -191,19 +192,10 @@
     "stream-browserify": "3.0.0",
     "tmp": "0.2.1",
     "ts-auto-mock": "3.5.0",
+    "ts-jest": "^27.1.3",
+    "ttypescript": "^1.5.13",
     "typescript": "4.4.3",
     "util": "0.12.4",
     "webpack": "5"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary"
-    ]
   }
 }
