support ganache and hardhat at once
use different chain ids and ports for the two of them

set TEST_ON_HARDHAT_NODE to non-blank to switch Jest to running against hardhat node

add --rebuild flag to start-ganache.sh to get new addresses into node module

add FORK_MAINNET env var when deploying to ganache

vault creation test is still not working on ganache, even though the hardhat test of the same does... will have to drill down into the differences more

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,5 @@
 # Shared Environment
 LOCAL_SEED_ADDRESS=0xYOUR_DEV_ADDRESS
-HARDHAT_CHAIN_ID=1337
-HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
-HARDHAT_FORK_BLOCK=13500000
-HARDHAT_GANACHE_PORT=8555
 REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
@@ -18,6 +14,15 @@ LOCAL_POSTGRES_USER=postgres
 LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 LOCAL_HASURA_ADMIN_SECRET=admin-secret
+
+# Hardhat
+HARDHAT_CHAIN_ID=1337
+HARDHAT_PORT=8545
+HARDHAT_GANACHE_CHAIN_ID=1338
+HARDHAT_GANACHE_PORT=8555
+HARDHAT_FORK_BLOCK=13500000
+HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
+TEST_ON_HARDHAT_NODE=
 
 PRISMA_DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 
