--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -21,18 +21,7 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: upload_circle_logo
-  definition:
-    kind: synchronous
-    handler: '{{HASURA_API_BASE_URL}}/actions/upload_circle_logo'
-    forward_client_headers: true
-    headers:
-    - name: verification_key
-      value_from_env: HASURA_EVENT_SECRET
-    permissions:
-    - role: user
-    - role: superadmin
-- name: logout_user
+- name: logoutUser
   definition:
     kind: synchronous
     handler: '{{HASURA_API_BASE_URL}}/actions/logout_user'
@@ -42,6 +31,17 @@ actions:
   permissions:
   - role: superadmin
   - role: user
+- name: upload_circle_logo
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/upload_circle_logo'
+    forward_client_headers: true
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
+  - role: superadmin
 - name: upload_profile_avatar
   definition:
     kind: synchronous
@@ -111,7 +111,7 @@ custom_types:
       type: object
       field_mapping:
         id: id
-  - name: logout_response
+  - name: logoutResponse
     relationships:
     - remote_table:
         schema: public
