--- a/.github/workflows/delete-hasura-preview.yml
+++ b/.github/workflows/delete-hasura-preview.yml
@@ -8,6 +8,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@v5.1
+
+      - name: Remove Vercel env variable for preview instance
+        continue-on-error: true
+        run: npx vercel --token ${{ env.VERCEL_TOKEN }} env rm REACT_APP_HASURA_URL preview ${{ steps.branch-name.outputs.current_branch }} -y
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+
       - name: Hasura Cloud Preview Apps
         uses: hasura/hasura-cloud-preview-apps@v0.1.5
         with:
