workaround for test failure
if the hardhat tests run first, then vault creation in the jest tests succeeds but is missing its event log...

so run the jest tests first!

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "hardhat:install": "yarn --cwd hardhat install",
     "hardhat:test": "yarn --cwd hardhat test",
     "test": "./hardhat/scripts/start-ganache.sh --deploy --exec craco test",
-    "test:ci": "./hardhat/scripts/start-ganache.sh --exec ./scripts/ci.sh",
+    "test:ci": "./hardhat/scripts/start-ganache.sh --deploy --exec ./scripts/ci.sh",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
