--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -76,16 +76,16 @@ actions:
   permissions:
   - role: user
   - role: superadmin
-- name: create_nominee
+- name: createNominee
   definition:
     kind: synchronous
     handler: '{{HASURA_API_BASE_URL}}/actions/create_nominee'
     headers:
-    - name: verification_key
-      value_from_env: HASURA_EVENT_SECRET
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
   permissions:
-  - role: user
-  - role: superadmin
+    - role: user
+    - role: superadmin
 custom_types:
   enums: []
   input_objects:
@@ -94,7 +94,7 @@ custom_types:
   - name: UploadImageInput
   - name: UploadCircleImageInput
   - name: AdminUpdateUserInput
-  - name: create_nominee_input
+  - name: CreateNomineeInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -155,7 +155,7 @@ custom_types:
       field_mapping:
         id: id
   - name: createUserResponse
-  - name: create_nominee_response
+  - name: CreateNomineeResponse
     relationships:
     - remote_table:
         schema: public
