--- a/hasura/metadata/databases/default/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/default/tables/public_nominees.yaml
@@ -88,12 +88,12 @@ event_triggers:
   headers:
   - name: verification_key
     value_from_env: HASURA_EVENT_SECRET
-  name: check-nominee-discord
+  name: checkNomineeDiscord
   retry_conf:
     interval_sec: 3600
     num_retries: 5
     timeout_sec: 60
-  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/check-nominee-discord"
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/checkNomineeDiscord"
 - definition:
     enable_manual: false
     update:
@@ -102,9 +102,9 @@ event_triggers:
   headers:
   - name: verification_key
     value_from_env: HASURA_EVENT_SECRET
-  name: check-nominee-telegram
+  name: checkNomineeTelegram
   retry_conf:
     interval_sec: 3600
     num_retries: 5
     timeout_sec: 60
-  webhook: "{{HASURA_API_BASE_URL}}/event-triggers/check-nominee-telegram"
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/checkNomineeTelegram"
