Migrations for Vaults related tables

--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -3,6 +3,8 @@
 - "!include public_circle_metadata.yaml"
 - "!include public_circle_private.yaml"
 - "!include public_circles.yaml"
+- "!include public_claims.yaml"
+- "!include public_distributions.yaml"
 - "!include public_epoches.yaml"
 - "!include public_gift_private.yaml"
 - "!include public_histories.yaml"
@@ -15,4 +17,6 @@
 - "!include public_teammates.yaml"
 - "!include public_token_gifts.yaml"
 - "!include public_users.yaml"
+- "!include public_vault_transactions.yaml"
+- "!include public_vaults.yaml"
 - "!include public_vouches.yaml"
