--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "hardhat:deploy": "yarn --cwd hardhat deploy",
     "hardhat:install": "yarn --cwd hardhat install",
     "hardhat:test": "yarn --cwd hardhat test",
-    "test": "craco test",
-    "test:ci": "./hardhat/scripts/start-ganache.sh --exec ./scripts/ci.sh",
+    "test": "./hardhat/scripts/start-ganache.sh --deploy --exec craco test",
+    "test:ci": "./hardhat/scripts/start-ganache.sh --deploy --exec ./scripts/ci.sh",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
@@ -162,6 +162,7 @@
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "@vercel/node": "1.12.1",
+    "@web3-react/network-connector": "^6.2.9",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
@@ -179,6 +180,7 @@
     "http-browserify": "1.7.0",
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
+    "jest-ts-auto-mock": "^2.0.0",
     "lint-staged": "10.5.4",
     "os-browserify": "0.3.0",
     "prettier": "2.4.1",
@@ -190,19 +192,10 @@
     "stream-browserify": "3.0.0",
     "tmp": "0.2.1",
     "ts-auto-mock": "3.5.0",
+    "ts-jest": "^27.1.3",
+    "ttypescript": "^1.5.13",
     "typescript": "4.4.3",
     "util": "0.12.4",
     "webpack": "5"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary"
-    ]
   }
 }
